:recycle: 优化 jdbc 组件代码